--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mic_stream: ^0.5.3+1
-  dependencies:
   awesome_notifications: ^0.6.16
+  noise_meter: ^4.0.1
   flutter_local_notifications: ^8.2.0
-  permission_handler: ^8.3.0
+  permission_handler: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
